--- a/dask_hpcconfig/clusters.yaml
+++ b/dask_hpcconfig/clusters.yaml
@@ -46,3 +46,30 @@ datarmor:
         terminate: 0.99  # fraction at which we terminate the worker
     comm:
       compression: null
+      
+
+datarmor-seq:
+  cluster:
+    type: pbs
+    name: dask-worker-datarmor
+    cores: 1
+    memory: '120GB'
+    processes: 1
+    queue: seq
+    death-timeout: 250
+    resource-spec: select=1:ncpus=1:mem=4GB
+    job-extra: [-m n]
+    interface: "ib0"
+    walltime: "12:00:00"
+    local-directory: "$TMPDIR"
+  distributed:
+    scheduler:
+      bandwidth: 10000000000    # 10000 MB/s estimated worker-worker bandwidth with IB, it should go better...
+    worker:
+      memory:
+        target: 0.90  # Avoid spilling to disk
+        spill: 0  # Avoid spilling to disk
+        pause: 0.95  # fraction at which we pause worker threads
+        terminate: 0.99  # fraction at which we terminate the worker
+    comm:
+      compression: null
