add the readme as the long description

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,8 @@ name = dask-hpcconfig
 author_email = justus.magin@ifremer.fr
 license = MIT
 description = Configuration for various dask clusters
+long_description=file: README.md
+long_description_content_type=text/markdown
 url = https://github.com/umr-lops/dask-hpcconfig
 project_urls =
     Documentation=https://dask-hpcconfig.readthedocs.io
