--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,6 +2,7 @@ dask-jobqueue
 dask[array]
 distributed
 typer
+click<8.1  # 8.1 breaks typer at the moment
 rich
 pyyaml
 ipython
@@ -10,3 +11,4 @@ sphinx-copybutton
 sphinx-panels
 sphinx-click
 sphinx-book-theme
+-e .
