--- a/ci/docs.yaml
+++ b/ci/docs.yaml
@@ -9,7 +9,7 @@ dependencies:
   - pyyaml
   - typer
   - rich
-  - sphinx < 5
+  - sphinx
   - sphinx-book-theme
   - sphinx-click
   - sphinx-copybutton
