attempt to fix the docs (#23)
* unpin `click`

* pin `python` to 3.10

* unpin sphinx

* pin `sphinx` to at least version 5

* replace `sphinx-panels` with `sphinx-design`

* unpin `sphinx` to get a more recent version of `sphinx-book-theme`

--- a/ci/docs.yaml
+++ b/ci/docs.yaml
@@ -2,16 +2,16 @@ channels:
   - conda-forge
   - nodefaults
 dependencies:
-  - python=3.9
+  - python=3.10
   - dask
   - distributed
   - dask-jobqueue
   - pyyaml
   - typer
   - rich
-  - sphinx < 5
+  - sphinx
   - sphinx-book-theme
   - sphinx-click
   - sphinx-copybutton
-  - sphinx-panels
+  - sphinx-design
   - ipython
