--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,6 +21,9 @@ repos:
     rev: v0.3.8
     hooks:
       - id: blackdoc
+      - id: blackdoc-autoupdate-black
+    additional_dependencies:
+      - black==22.10.0
 
   - repo: https://github.com/pycqa/flake8
     rev: 6.0.0
