require a recent version of `dask-jobqueue`
This is because that's when the deprecation warning was introduced.

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ include_package_data = True
 python_requires = >=3.8
 install_requires =
     pyyaml
-    dask-jobqueue
+    dask-jobqueue >=0.8
 
 [options.entry_points]
 console_scripts =
