remove the unneeded resource spec

--- a/dask_hpcconfig/clusters.yaml
+++ b/dask_hpcconfig/clusters.yaml
@@ -30,7 +30,7 @@ datarmor:
     processes: 14
     queue: mpi_1
     death-timeout: 250
-    resource-spec: select=1:ncpus=28:mem=120GB
+    # resource-spec: select=1:ncpus=28:mem=120GB
     job-extra-directives: [-m n]
     interface: "ib0"
     walltime: "12:00:00"
