--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,8 @@ include_package_data = True
 python_requires = >=3.8
 install_requires =
     pyyaml
+    dask >=2022.11.0
+    distributed >=2022.11.0
 
 [options.entry_points]
 console_scripts =
