--- a/setup.cfg
+++ b/setup.cfg
@@ -15,11 +15,16 @@ include_package_data = True
 python_requires = >=3.8
 install_requires =
     pyyaml
-    dask-jobqueue >=0.8
+    dask >=2022.11.0
+    distributed >=2022.11.0
 
 [options.entry_points]
 console_scripts =
     dask-hpcconfig=dask_hpcconfig.cli:app
+
+[options.extras_require]
+jobqueue =
+    dask-jobqueue >=0.8
 
 [options.package_data]
 dask_hpcconfig =
