update cluster configuration

--- a/dask_hpcconfig/clusters.yaml
+++ b/dask_hpcconfig/clusters.yaml
@@ -7,6 +7,8 @@ datarmor-local:
   cluster:
     type: local
     name: dask-worker-local
+    threads_per_worker: 2
+    n_workers: 14
     local-directory: $TMPDIR
   distributed:
     scheduler:
@@ -53,11 +55,11 @@ datarmor-seq:
     type: pbs
     name: dask-worker-datarmor
     cores: 1
-    memory: '120GB'
+    memory: '115GB'
     processes: 1
     queue: sequentiel
     death-timeout: 250
-    resource-spec: select=1:ncpus=1:mem=4GB
+    resource-spec: select=1:ncpus=1:mem=115GB
     job-extra-directives: [-m n]
     interface: "ib0"
     walltime: "12:00:00"
