--- a/dask_hpcconfig/clusters.yaml
+++ b/dask_hpcconfig/clusters.yaml
@@ -12,11 +12,11 @@ datarmor-local:
     local-directory: $TMPDIR
   distributed:
     scheduler:
-      bandwidth: 10000000000    # 10000 MB/s estimated worker-worker bandwidth with IB, it should go better...
+      bandwidth: 10000000000    # 10000 MB/s estimated worker-worker bandwidth in the same node.
     worker:
       memory:
         target: 0.90  # Avoid spilling to disk
-        spill: 0  # Avoid spilling to disk
+        spill: 0  # Do not use any spill to disk.  Datarmor have 'no local disk' thus never spill to a disk
         pause: 0.95  # fraction at which we pause worker threads
         terminate: 0.99  # fraction at which we terminate the worker
       use-file-locking: False
@@ -42,8 +42,8 @@ datarmor:
       bandwidth: 10000000000    # 10000 MB/s estimated worker-worker bandwidth with IB, it should go better...
     worker:
       memory:
-        target: 0.90  # Avoid spilling to disk
-        spill: 0  # Avoid spilling to disk
+        target: 0.90  # try to use only 90% of memory allocated by the worker
+        spill: 0  # Do not use any spill to disk.  Datarmor have 'no local disk' thus never spill to a disk
         pause: 0.95  # fraction at which we pause worker threads
         terminate: 0.99  # fraction at which we terminate the worker
     comm:
@@ -70,7 +70,7 @@ datarmor-seq:
     worker:
       memory:
         target: 0.90  # Avoid spilling to disk
-        spill: 0  # Avoid spilling to disk
+        spill: 0  # Do not use any spill to disk.  Datarmor have 'no local disk' thus never spill to a disk
         pause: 0.95  # fraction at which we pause worker threads
         terminate: 0.99  # fraction at which we terminate the worker
     comm:
