--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,10 +30,9 @@ repos:
     hooks:
       - id: isort
 
-  - repo: https://github.com/psf/black
+  - repo: https://github.com/psf/black-pre-commit-mirror
     rev: 25.1.0
     hooks:
-      - id: black
       - id: black-jupyter
 
   - repo: https://github.com/keewis/blackdoc
