--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,3 +42,11 @@ known-first-party = ["dask_hpcconfig"]
 [tool.ruff.lint.flake8-tidy-imports]
 # Disallow all relative imports.
 ban-relative-imports = "all"
+
+[tool.coverage.run]
+source = ["dask_hpcconfig"]
+branch = true
+
+[tool.coverage.report]
+show_missing = true
+exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]
