--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,3 +82,20 @@ branch = true
 [tool.coverage.report]
 show_missing = true
 exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]
+
+[tool.pixi.workspace]
+channels = ["conda-forge"]
+platforms = ["linux-64"]
+
+[tool.pixi.pypi-dependencies]
+dask-hpcconfig = { path = ".", editable = true }
+
+[tool.pixi.environments]
+default = { solve-group = "default" }
+jobqueue = { features = ["jobqueue"], solve-group = "default" }
+build = ["build"]
+
+[tool.pixi.tasks]
+
+[tool.pixi.feature.build.dependencies]
+python-build = "*"
