--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,17 +4,30 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
-      - id: check-yaml
+      - id: check-docstring-first
 
-  - repo: https://github.com/pycqa/isort
-    rev: 6.0.1
+  - repo: https://github.com/rbubley/mirrors-prettier
+    rev: v3.5.3
     hooks:
-      - id: isort
+      - id: prettier
+        args: ["--cache-location=.prettier_cache/cache"]
 
-  - repo: https://github.com/psf/black
+  - repo: https://github.com/ComPWA/taplo-pre-commit
+    rev: v0.9.3
+    hooks:
+      - id: taplo-format
+        args: ["--option", "array_auto_collapse=false"]
+      - id: taplo-lint
+        args: ["--no-schema"]
+
+  - repo: https://github.com/abravalheri/validate-pyproject
+    rev: v0.24.1
+    hooks:
+      - id: validate-pyproject
+
+  - repo: https://github.com/psf/black-pre-commit-mirror
     rev: 25.1.0
     hooks:
-      - id: black
       - id: black-jupyter
 
   - repo: https://github.com/keewis/blackdoc
@@ -25,7 +38,12 @@ repos:
           - black==25.1.0
       - id: blackdoc-autoupdate-black
 
-  - repo: https://github.com/pycqa/flake8
-    rev: 7.2.0
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.11.13
     hooks:
-      - id: flake8
+      - id: ruff-check
+        args: ["--fix"]
+
+ci:
+  autofix_prs: true
+  autoupdate_schedule: monthly
